antlr/tdat/parser/tdat_parser.go
// Code generated from Tdat.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // Tdat

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TdatParser struct {
	*antlr.BaseParser
}

var tdatParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tdatParserInit() {
	staticData := &tdatParserStaticData
	staticData.literalNames = []string{
		"", "':'", "'{'", "'}'", "'=>'", "';'", "'Each'", "'None'", "'Any'",
		"'|'", "','", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'roundUp'",
		"'roundDown'", "'abs'", "'or'", "'and'", "'<'", "'>'", "'<='", "'>='",
		"'=='", "'!='",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "ID", "METRIC", "INT",
		"FLOAT", "STRING", "CHAR", "LINE_COMMENT", "COMMENT", "WS",
	}
	staticData.ruleNames = []string{
		"prog", "ruleLine", "ruleID", "enumerableFunc", "windowsRange", "conditionExpr",
		"primaryExpr", "arithmeticOp", "builtin", "logicalOp", "comparisonOp",
		"literal", "result",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TdatParserInit initializes any static state used to implement TdatParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTdatParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TdatParserInit() {
	staticData := &tdatParserStaticData
	staticData.once.Do(tdatParserInit)
}

// NewTdatParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTdatParser(input antlr.TokenStream) *TdatParser {
	TdatParserInit()
	this := new(TdatParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &tdatParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Tdat.g4"

	return this
}

// TdatParser tokens.
const (
	TdatParserEOF          = antlr.TokenEOF
	TdatParserT__0         = 1
	TdatParserT__1         = 2
	TdatParserT__2         = 3
	TdatParserT__3         = 4
	TdatParserT__4         = 5
	TdatParserT__5         = 6
	TdatParserT__6         = 7
	TdatParserT__7         = 8
	TdatParserT__8         = 9
	TdatParserT__9         = 10
	TdatParserT__10        = 11
	TdatParserT__11        = 12
	TdatParserT__12        = 13
	TdatParserT__13        = 14
	TdatParserT__14        = 15
	TdatParserT__15        = 16
	TdatParserT__16        = 17
	TdatParserT__17        = 18
	TdatParserT__18        = 19
	TdatParserT__19        = 20
	TdatParserT__20        = 21
	TdatParserT__21        = 22
	TdatParserT__22        = 23
	TdatParserT__23        = 24
	TdatParserT__24        = 25
	TdatParserT__25        = 26
	TdatParserT__26        = 27
	TdatParserT__27        = 28
	TdatParserID           = 29
	TdatParserMETRIC       = 30
	TdatParserINT          = 31
	TdatParserFLOAT        = 32
	TdatParserSTRING       = 33
	TdatParserCHAR         = 34
	TdatParserLINE_COMMENT = 35
	TdatParserCOMMENT      = 36
	TdatParserWS           = 37
)

// TdatParser rules.
const (
	TdatParserRULE_prog           = 0
	TdatParserRULE_ruleLine       = 1
	TdatParserRULE_ruleID         = 2
	TdatParserRULE_enumerableFunc = 3
	TdatParserRULE_windowsRange   = 4
	TdatParserRULE_conditionExpr  = 5
	TdatParserRULE_primaryExpr    = 6
	TdatParserRULE_arithmeticOp   = 7
	TdatParserRULE_builtin        = 8
	TdatParserRULE_logicalOp      = 9
	TdatParserRULE_comparisonOp   = 10
	TdatParserRULE_literal        = 11
	TdatParserRULE_result         = 12
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) AllRuleLine() []IRuleLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleLineContext); ok {
			len++
		}
	}

	tst := make([]IRuleLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleLineContext); ok {
			tst[i] = t.(IRuleLineContext)
			i++
		}
	}

	return tst
}

func (s *ProgContext) RuleLine(i int) IRuleLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleLineContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *TdatParser) Prog() (localctx IProgContext) {
	this := p
	_ = this

	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TdatParserRULE_prog)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == TdatParserID {
		{
			p.SetState(26)
			p.RuleLine()
		}

		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IRuleLineContext is an interface to support dynamic dispatch.
type IRuleLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRuleLineContext differentiates from other interfaces.
	IsRuleLineContext()
}

type RuleLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleLineContext() *RuleLineContext {
	var p = new(RuleLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_ruleLine
	return p
}

func (*RuleLineContext) IsRuleLineContext() {}

func NewRuleLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleLineContext {
	var p = new(RuleLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_ruleLine

	return p
}

func (s *RuleLineContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleLineContext) RuleID() IRuleIDContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleIDContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleIDContext)
}

func (s *RuleLineContext) EnumerableFunc() IEnumerableFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumerableFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumerableFuncContext)
}

func (s *RuleLineContext) WindowsRange() IWindowsRangeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWindowsRangeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWindowsRangeContext)
}

func (s *RuleLineContext) ConditionExpr() IConditionExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionExprContext)
}

func (s *RuleLineContext) Result() IResultContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResultContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResultContext)
}

func (s *RuleLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterRuleLine(s)
	}
}

func (s *RuleLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitRuleLine(s)
	}
}

func (p *TdatParser) RuleLine() (localctx IRuleLineContext) {
	this := p
	_ = this

	localctx = NewRuleLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TdatParserRULE_ruleLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.RuleID()
	}
	{
		p.SetState(32)
		p.Match(TdatParserT__0)
	}
	{
		p.SetState(33)
		p.EnumerableFunc()
	}
	{
		p.SetState(34)
		p.Match(TdatParserT__1)
	}
	{
		p.SetState(35)
		p.WindowsRange()
	}
	{
		p.SetState(36)
		p.conditionExpr(0)
	}
	{
		p.SetState(37)
		p.Match(TdatParserT__2)
	}
	{
		p.SetState(38)
		p.Match(TdatParserT__3)
	}
	{
		p.SetState(39)
		p.Result()
	}
	{
		p.SetState(40)
		p.Match(TdatParserT__4)
	}

	return localctx
}

// IRuleIDContext is an interface to support dynamic dispatch.
type IRuleIDContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRuleIDContext differentiates from other interfaces.
	IsRuleIDContext()
}

type RuleIDContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleIDContext() *RuleIDContext {
	var p = new(RuleIDContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_ruleID
	return p
}

func (*RuleIDContext) IsRuleIDContext() {}

func NewRuleIDContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleIDContext {
	var p = new(RuleIDContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_ruleID

	return p
}

func (s *RuleIDContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleIDContext) ID() antlr.TerminalNode {
	return s.GetToken(TdatParserID, 0)
}

func (s *RuleIDContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleIDContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleIDContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterRuleID(s)
	}
}

func (s *RuleIDContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitRuleID(s)
	}
}

func (p *TdatParser) RuleID() (localctx IRuleIDContext) {
	this := p
	_ = this

	localctx = NewRuleIDContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TdatParserRULE_ruleID)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(TdatParserID)
	}

	return localctx
}

// IEnumerableFuncContext is an interface to support dynamic dispatch.
type IEnumerableFuncContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumerableFuncContext differentiates from other interfaces.
	IsEnumerableFuncContext()
}

type EnumerableFuncContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumerableFuncContext() *EnumerableFuncContext {
	var p = new(EnumerableFuncContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_enumerableFunc
	return p
}

func (*EnumerableFuncContext) IsEnumerableFuncContext() {}

func NewEnumerableFuncContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumerableFuncContext {
	var p = new(EnumerableFuncContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_enumerableFunc

	return p
}

func (s *EnumerableFuncContext) GetParser() antlr.Parser { return s.parser }
func (s *EnumerableFuncContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumerableFuncContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumerableFuncContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterEnumerableFunc(s)
	}
}

func (s *EnumerableFuncContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitEnumerableFunc(s)
	}
}

func (p *TdatParser) EnumerableFunc() (localctx IEnumerableFuncContext) {
	this := p
	_ = this

	localctx = NewEnumerableFuncContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TdatParserRULE_enumerableFunc)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<TdatParserT__5)|(1<<TdatParserT__6)|(1<<TdatParserT__7))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IWindowsRangeContext is an interface to support dynamic dispatch.
type IWindowsRangeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWindowsRangeContext differentiates from other interfaces.
	IsWindowsRangeContext()
}

type WindowsRangeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWindowsRangeContext() *WindowsRangeContext {
	var p = new(WindowsRangeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_windowsRange
	return p
}

func (*WindowsRangeContext) IsWindowsRangeContext() {}

func NewWindowsRangeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WindowsRangeContext {
	var p = new(WindowsRangeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_windowsRange

	return p
}

func (s *WindowsRangeContext) GetParser() antlr.Parser { return s.parser }

func (s *WindowsRangeContext) CopyFrom(ctx *WindowsRangeContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *WindowsRangeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WindowsRangeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type WindowsWithZeroIndexContext struct {
	*WindowsRangeContext
}

func NewWindowsWithZeroIndexContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WindowsWithZeroIndexContext {
	var p = new(WindowsWithZeroIndexContext)

	p.WindowsRangeContext = NewEmptyWindowsRangeContext()
	p.parser = parser
	p.CopyFrom(ctx.(*WindowsRangeContext))

	return p
}

func (s *WindowsWithZeroIndexContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WindowsWithZeroIndexContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterWindowsWithZeroIndex(s)
	}
}

func (s *WindowsWithZeroIndexContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitWindowsWithZeroIndex(s)
	}
}

type WindowsWithLowAndHighIndexContext struct {
	*WindowsRangeContext
}

func NewWindowsWithLowAndHighIndexContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WindowsWithLowAndHighIndexContext {
	var p = new(WindowsWithLowAndHighIndexContext)

	p.WindowsRangeContext = NewEmptyWindowsRangeContext()
	p.parser = parser
	p.CopyFrom(ctx.(*WindowsRangeContext))

	return p
}

func (s *WindowsWithLowAndHighIndexContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WindowsWithLowAndHighIndexContext) AllINT() []antlr.TerminalNode {
	return s.GetTokens(TdatParserINT)
}

func (s *WindowsWithLowAndHighIndexContext) INT(i int) antlr.TerminalNode {
	return s.GetToken(TdatParserINT, i)
}

func (s *WindowsWithLowAndHighIndexContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterWindowsWithLowAndHighIndex(s)
	}
}

func (s *WindowsWithLowAndHighIndexContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitWindowsWithLowAndHighIndex(s)
	}
}

func (p *TdatParser) WindowsRange() (localctx IWindowsRangeContext) {
	this := p
	_ = this

	localctx = NewWindowsRangeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TdatParserRULE_windowsRange)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		localctx = NewWindowsWithZeroIndexContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(46)
			p.Match(TdatParserT__8)
		}
		{
			p.SetState(47)
			p.Match(TdatParserT__8)
		}

	case 2:
		localctx = NewWindowsWithLowAndHighIndexContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(48)
			p.Match(TdatParserT__8)
		}
		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TdatParserINT {
			{
				p.SetState(49)
				p.Match(TdatParserINT)
			}

		}
		{
			p.SetState(52)
			p.Match(TdatParserT__9)
		}
		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TdatParserINT {
			{
				p.SetState(53)
				p.Match(TdatParserINT)
			}

		}
		{
			p.SetState(56)
			p.Match(TdatParserT__8)
		}

	}

	return localctx
}

// IConditionExprContext is an interface to support dynamic dispatch.
type IConditionExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConditionExprContext differentiates from other interfaces.
	IsConditionExprContext()
}

type ConditionExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionExprContext() *ConditionExprContext {
	var p = new(ConditionExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TdatParserRULE_conditionExpr
	return p
}

func (*ConditionExprContext) IsConditionExprContext() {}

func NewConditionExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionExprContext {
	var p = new(ConditionExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TdatParserRULE_conditionExpr

	return p
}

func (s *ConditionExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionExprContext) AllConditionExpr() []IConditionExprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConditionExprContext); ok {
			len++
		}
	}

	tst := make([]IConditionExprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConditionExprContext); ok {
			tst[i] = t.(IConditionExprContext)
			i++
		}
	}

	return tst
}

func (s *ConditionExprContext) ConditionExpr(i int) IConditionExprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionExprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionExprContext)
}

func (s *ConditionExprContext) AllPrimaryExpr() []IPrimaryExprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPrimaryExprContext); ok {
			len++
		}
	}

	tst := make([]IPrimaryExprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPrimaryExprContext); ok {
			tst[i] = t.(IPrimaryExprContext)
			i++
		}
	}

	return tst
}

func (s *ConditionExprContext) PrimaryExpr(i int) IPrimaryExprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimaryExprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimaryExprContext)
}

func (s *ConditionExprContext) ComparisonOp() IComparisonOpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparisonOpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparisonOpContext)
}

func (s *ConditionExprContext) LogicalOp() ILogicalOpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogicalOpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogicalOpContext)
}

func (s *ConditionExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConditionExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.EnterConditionExpr(s)
	}
}

func (s *ConditionExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TdatListener); ok {
		listenerT.ExitConditionExpr(s)
	}
}

func (p *TdatParser) ConditionExpr() (localctx IConditionExprContext) {
	return p.conditionExpr(0)
}

func (p *TdatParser) conditionExpr(_p int) (localctx IConditionExprContext) {
	this := p
	_ = this

	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewConditionExprContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IConditionExprContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 10
	p.EnterRecursionRule(localctx, 10, TdatParserRULE_conditionExpr, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(60)
			p.Match(TdatParserT__10)
		}
		{
			p.SetState(61)
			p.conditionExpr(0)
		}
		{
			p.SetState(62)
			p.Match(TdatParserT__11)
		}

	case 2:
		{
			p.SetState(64)
			p.primaryExpr(0)
		}
		{
			p.SetState(65)
			p.ComparisonOp()
		}
		{
			p.SetState(66)
			p.primaryExpr(0)
		}

	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())
